Updated GBM files

--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -140,7 +140,7 @@
 				<div class="mini-cart hide">
 				    
 				    <div class="mini-cart__head">
-					    <a href="#" class="mini-cart__close"><svg class="icon icon--youtube"><use xlink:href="img/sprite/sprite.svg#icon-cross"></use></svg></a>
+					    <a href="#" class="mini-cart__close"><svg class="icon icon--cross"><use xlink:href="img/sprite/sprite.svg#icon-cross"></use></svg></a>
 						<h4 class="mini-cart__title">Your Basket</h4>
 				    </div>
 				    
@@ -152,9 +152,9 @@
 				            <p class="e-description">2 x 227g/8oz Steaks</p>
 							<p class="p-price">£11.60</p>
 				            <div class="qty qty--small">
-								<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+								<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
 								<input type="text" value="2" class="text-input qty__input" />
-								<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+								<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 								<a href="#" class="qty__remove">Remove</a>
 							</div>
 				        </div>
@@ -165,9 +165,9 @@
 				            <p class="e-description">2 x 227g/8oz Steaks</p>
 							<p class="p-price">£11.60</p>
 				            <div class="qty qty--small">
-								<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+								<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
 								<input type="text" value="2" class="text-input qty__input" />
-								<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+								<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 								<a href="#" class="qty__remove">Remove</a>
 							</div>
 				        </div>
@@ -177,9 +177,9 @@
 				            <p class="e-description">2 x 227g/8oz Steaks</p>
 							<p class="p-price">£11.60</p>
 				            <div class="qty qty--small">
-								<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+								<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
 								<input type="text" value="2" class="text-input qty__input" />
-								<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+								<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 								<a href="#" class="qty__remove">Remove</a>
 							</div>
 				        </div>
@@ -189,9 +189,9 @@
 				            <p class="e-description">2 x 227g/8oz Steaks</p>
 							<p class="p-price">£11.60</p>
 				            <div class="qty qty--small">
-								<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+								<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
 								<input type="text" value="2" class="text-input qty__input" />
-								<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+								<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 								<a href="#" class="qty__remove">Remove</a>
 							</div>
 				        </div>
