--- a/sites/gbm/basket.html
+++ b/sites/gbm/basket.html
@@ -167,9 +167,9 @@
 									</td>
 									<td class="basket__qty">
 										<div class="qty qty--small">
-											<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+											<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
 											<input type="text" value="2" class="text-input qty__input" />
-											<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+											<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 											<a href="#" class="qty__remove">Remove</a>
 										</div>
 									</td>
@@ -188,9 +188,9 @@
 									</td>
 									<td class="basket__qty">
 										<div class="qty qty--small">
-											<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
-											<input type="text" value="1" class="text-input qty__input" />
-											<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+											<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+											<input type="text" value="2" class="text-input qty__input" />
+											<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 											<a href="#" class="qty__remove">Remove</a>
 										</div>
 									</td>
@@ -209,9 +209,9 @@
 									</td>
 									<td class="basket__qty">
 										<div class="qty qty--small">
-											<button class="qty__down"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
-											<input type="text" value="1" class="text-input qty__input" />
-											<button class="qty__up"><svg class="icon icon--location"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
+											<button class="qty__down"><svg class="icon icon--minus"><use xlink:href="img/sprite/sprite.svg#icon-minus"></use></svg></button>
+											<input type="text" value="2" class="text-input qty__input" />
+											<button class="qty__up"><svg class="icon icon--plus"><use xlink:href="img/sprite/sprite.svg#icon-plus"></use></svg></button>
 											<a href="#" class="qty__remove">Remove</a>
 										</div>
 									</td>
