Updated gbm files for client ent to review

--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -278,6 +278,15 @@
 									<a href="#" class="flag p-category">Special Offer</a>
 									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Smoked Back Bacon</a></h2>
 									<p class="mosaic__desc e-description">British Back Bacon</p>
+									<div class="h-review mosaic__review">
+										<data class="p-rating" value="3">
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+										</data>
+						            </div>
 									<p class="mosaic__value"><del>£4.95</del> <data class="p-price" value="4.05">£4.05</data></p>
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
@@ -292,9 +301,8 @@
 									<span class="flag p-category">Limited Stock</span>
 									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Sirloin Steaks</a></h2>
 									<p class="mosaic__desc e-description">2 x 227g/8oz Steaks</p>
-									<p class="mosaic__value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
 									<div class="h-review mosaic__review">
-										<data class="p-rating">
+										<data class="p-rating" value="5">
 								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
 								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
 								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
@@ -302,6 +310,8 @@
 								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
 										</data>
 						            </div>
+									<p class="mosaic__value"><del>£12.80</del> <data class="p-price" value="11.60">£11.60</data></p>
+									
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
 							</div>
@@ -314,6 +324,15 @@
 								<div class="mosaic__caption">
 									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Silverside Joint</a></h2>
 									<p class="mosaic__desc e-description">1kg (serves 2-4)</p>
+									<div class="h-review mosaic__review">
+										<data class="p-rating" value="4">
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+										</data>
+						            </div>
 									<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="6.77">£6.77</data></p>
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
@@ -327,6 +346,15 @@
 								<div class="mosaic__caption">
 									<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Shanks</a></h2>
 									<p class="mosaic__desc e-description">2 x 454g/16oz</p>
+									<div class="h-review mosaic__review">
+										<data class="p-rating" value="5">
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+										</data>
+						            </div>
 									<p class="mosaic__value"><del>£12.00</del> <data class="p-price" value="10.00">£10.00</data></p>
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
@@ -340,6 +368,15 @@
 								<div class="mosaic__caption">
 									<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Leg Boneless</a></h2>
 									<p class="mosaic__desc e-description">900g serves 3-4 people</p>
+									<div class="h-review mosaic__review">
+										<data class="p-rating" value="5">
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+										</data>
+						            </div>
 									<p class="mosaic__value"><del>£20.25</del> <data class="p-price" value="12.50">£12.50</data></p>
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
@@ -353,6 +390,15 @@
 								<div class="mosaic__caption">
 									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Racks of Lamb</a></h2>
 									<p class="mosaic__desc e-description">2 x 3-bone racks (170g/6oz)</p>
+									<div class="h-review mosaic__review">
+										<data class="p-rating" value="5">
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+								            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
+										</data>
+						            </div>
 									<p class="mosaic__value"><del>£14.00</del> <data class="p-price" value="12.00">£12.00</data></p>
 									<a href="#" class="btn">Add to Cart</a>
 								</div>
@@ -421,7 +467,7 @@
 				<div class="wrap">
 					
 					<div class="newsletter__hgroup">
-						<h3 class="newsletter__hgroup-title">Sign up for our Newsletter</h3>
+						<h4 class="newsletter__hgroup-title">Sign up for our Newsletter</h4>
 						<p class="newsletter__hgroup-text">Get notified of special offers & exclusive discount codes.</p>
 					</div>
 					<form class="newsletter__form">
