Updated GBM for iphone test

--- a/sites/gbm/product-detail.html
+++ b/sites/gbm/product-detail.html
@@ -158,7 +158,7 @@
 						
 						<div class="grid__item one-third product__detail sticky">
 							
-							<h1>Sirlion Steaks</h1>
+							<h1 class="p-name">Sirlion Steaks</h1>
 							<div class="h-review mosaic__review">
 								<data class="p-rating" value="5">
 						            <svg class="icon icon--star"><use xlink:href="img/sprite/sprite.svg#icon-star"></use></svg>
