--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -76,7 +76,6 @@
 								<svg class="icon icon--search"><use xlink:href="img/sprite/sprite.svg#icon-search"></use></svg>
 							</button>
 						</form>
-<!-- 						<a href="#" class="user-nav__link"><svg class="icon icon--search"><use xlink:href="img/sprite/sprite.svg#icon-search"></use></svg></a> -->
 					</li>
 					<li class="user-nav__item"><a href="#" class="user-nav__link"><svg class="icon icon--user"><use xlink:href="img/sprite/sprite.svg#icon-user"></use></svg></a></li>
 					<li class="user-nav__item user-nav__item--basket"><a href="#" class="user-nav__link user-nav__link--basket"><svg class="icon icon--basket"><use xlink:href="img/sprite/sprite.svg#icon-basket"></use></svg> £39.99 <span class="user-nav__qty">3</span></a></li>
@@ -338,7 +337,7 @@
 									<img src="img/temp/product-images/thumbs/lamb-shanks.jpg" class="mosaic__image u-photo" alt="ALT TEXT" />
 								</a>
 								<div class="mosaic__caption">
-									<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Shanks</a></h2>
+									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Lamb Shanks</a></h2>
 									<p class="mosaic__desc e-description">2 x 454g/16oz</p>
 									<div class="h-review mosaic__review">
 										<data class="p-rating" value="5">
@@ -360,7 +359,7 @@
 									<img src="img/temp/product-images/thumbs/lamb-leg-boneless.jpg" class="mosaic__image u-photo" alt="ALT TEXT" />
 								</a>
 								<div class="mosaic__caption">
-									<h2 class="mosaic__title p-name">Lamb</span> <a href="#" class="moasic__title-link">Lamb Leg Boneless</a></h2>
+									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Lamb Leg Boneless Lamb Leg Boneless Lamb Leg Boneless</a></h2>
 									<p class="mosaic__desc e-description">900g serves 3-4 people</p>
 									<div class="h-review mosaic__review">
 										<data class="p-rating" value="5">
