--- a/sites/gbm/basket.html
+++ b/sites/gbm/basket.html
@@ -240,7 +240,7 @@
 							</tfoot>
 						</table>
 						
-						<button class="btn btn--large">Checkout</button>
+						<button class="btn btn--primary btn--large">Checkout</button>
 						<a href="#" class="btn btn--neutral btn--large">Update Basket</a>
 						
 					</form>
