--- a/sites/gbm/login.html
+++ b/sites/gbm/login.html
@@ -16,7 +16,7 @@
 		<link rel="canonical" href="http://www.greatbritishmeat.com">
 
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/theme.css">
 		
 		<!-- FONTS -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i|Roboto+Slab:400,700" rel="stylesheet">
