Updated GBM to show client

--- a/sites/gbm/search-results.html
+++ b/sites/gbm/search-results.html
@@ -74,7 +74,7 @@
 					<li class="user-nav__item user-nav__item--basket"><a href="#" class="user-nav__link user-nav__link--basket"><svg class="icon icon--basket"><use xlink:href="img/sprite/sprite.svg#icon-basket"></use></svg> £39.99 <span class="user-nav__qty">3</span></a></li>
 				</ul>
 				
-				<a href="index.html" class="site-nav__home-link"><img src="img/interface/logo.svg" alt="The Great British Meat Co." class="site-nav__logo" /></a>
+				<a href="index.html" class="site-nav__home-link"><img src="assets/logo.svg" alt="The Great British Meat Co." class="site-nav__logo" /></a>
 				
 				<nav class="site-nav">
 					<ul class="site-nav__list">					
@@ -186,7 +186,7 @@
 						<li class="mosaic__item h-product">
 							<div class="mosaic__wrap">
 								<a href="#" class="mosaic__image-wrap">
-									<img src="img/temp/product-images/thumbs/beef-silverside.jpg" class="mosaic__image u-photo" alt="ALT TEXT" />
+									<img src="assets/placeholder-no-image.png" class="mosaic__image u-photo" alt="ALT TEXT" />
 								</a>
 								<div class="mosaic__caption">
 									<h2 class="mosaic__title p-name"><a href="#" class="moasic__title-link">Silverside Joint</a></h2>
