--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -81,7 +81,7 @@
 					<li class="user-nav__item user-nav__item--basket"><a href="#" class="user-nav__link user-nav__link--basket"><svg class="icon icon--basket"><use xlink:href="img/sprite/sprite.svg#icon-basket"></use></svg> £39.99 <span class="user-nav__qty">3</span></a></li>
 				</ul>
 				
-				<a href="index.html" class="site-nav__home-link"><img src="img/interface/logo.svg" alt="The Great British Meat Co." class="site-nav__logo" /></a>
+				<a href="index.html" class="site-nav__home-link"><img src="assets/logo.svg" alt="The Great British Meat Co." class="site-nav__logo" /></a>
 				
 				<nav class="site-nav">
 					<ul class="site-nav__list">					
