--- a/sites/gbm/nav-issue.html
+++ b/sites/gbm/nav-issue.html
@@ -16,80 +16,7 @@
 		<link rel="canonical" href="http://www.greatbritishmeat.com">
 
 		<!-- CSS -->
-<!-- 		<link rel="stylesheet" type="text/css" href="css/theme.css"> -->
-		<link rel="stylesheet" type="text/css" href="css/jquery.mmenu.all.css">
-		
-		<style>
-			
-			html {
-  background: transparent;
-  font-size: 62.5%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: white;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  background: white;
-  color: #778586;
-  -webkit-font-variant-ligatures: common-ligatures discretionary-ligatures
-    historical-ligatures;
-  -moz-font-variant-ligatures: common-ligatures discretionary-ligatures
-    historical-ligatures;
-  font-variant-ligatures: common-ligatures discretionary-ligatures
-    historical-ligatures;
-  font-family: "Roboto Slab", serif;
-  font-size: 12px;
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  text-rendering: optimizeLegibility;
-}
-
-.info-bar {
-  background: black;
-  color: white;
-  text-align: center;
-}
-
-.page-head {
-  background: #eee;
-  box-sizing: border-box;
-  padding: 15px 15px;
-  position: relative;
-  -webkit-transition: background 0.2s;
-  transition: background 0.2s;
-  width: 100%;
-  z-index: 1000;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-}
-
-.site-nav__item {
-  display: inline-block;
-}
-
-.megamenu {
-  display: none;
-}
-
-.band {
-  padding: 100px 0;
-  width: 100%;
-}
-
-.wrap {
-  max-width: 800px;
-  margin: 0 auto;
-}
-			
-		</style>
-		
+		<link rel="stylesheet" type="text/css" href="css/theme.css">
 		
 		<!-- FONTS -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800,800i|Roboto+Slab:400,700" rel="stylesheet">
@@ -195,8 +122,14 @@ body {
     
 
 		<!-- Scripts -->
+		<script src="js/modernizr-3.5.0.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/jquery.mmenu.all.js"></script>
+        <script src="js/slick.min.js"></script>
+		<script src="js/svg4everybody.min.js"></script>
+		<script src="js/stickyfill.min.js"></script>
+		<script src="js/jquery.datepicker.min.js"></script>
 		<script src="js/main.js"></script>
 
 	</body>
