--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -54,7 +54,7 @@
 
 	<body>
 		
-		<div id="my-page">
+		<div id="page" class="page">
 						
 			<div class="info-bar">
 				<h5 class="info-bar__text">Free Shipping on orders over £50 (standard delivery just £4.95)</h5>
