--- a/sites/gbm/404.html
+++ b/sites/gbm/404.html
@@ -66,7 +66,7 @@
 			
 			<header class="page-head sticky">
 				
-				<a href="#my-page" class="mmenu-toggle"><span>Menu</span></a>
+				<a href="#page" class="mmenu-toggle"><span>Menu</span></a>
 
 				<ul class="user-nav">
 					<li class="user-nav__item"><a href="#" class="user-nav__link"><svg class="icon icon--search"><use xlink:href="img/sprite/sprite.svg#icon-search"></use></svg></a></li>
