--- a/sites/gbm/index.html
+++ b/sites/gbm/index.html
@@ -66,7 +66,7 @@
 			
 			<header class="page-head sticky">
 				
-				<a href="#my-page" class="mmenu-toggle"><span>Menu</span></a>
+				<a href="#page" class="mmenu-toggle"><span>Menu</span></a>
 
 				<ul class="user-nav">
 					<li class="user-nav__item">
