--- a/sites/gbm/nav-issue.html
+++ b/sites/gbm/nav-issue.html
@@ -62,7 +62,7 @@
 	
 	    <header class="page-head sticky">
 	
-	      <a href="#my-page" class="mmenu-toggle"><span>Menu</span></a>
+	      <a href="#page" class="mmenu-toggle"><span>Menu</span></a>
 	
 	      <nav class="site-nav">
 	        <ul class="site-nav__list">
