Added Resorts template to show David

--- a/sites/twhc/index.html
+++ b/sites/twhc/index.html
@@ -157,12 +157,12 @@
 				<div class="slick-carousel">
 					<div>
 						<div class="resort">
-							<figure class="resort__image">
+							<a href="#" class="resort__image">
 								<img src="img/content/resorts/spain-ibiza.jpg" alt="ALT TEXT" />
-							</figure>
+							</a>
 							<div class="resort__wrap">
 								<h4 class="resort__subtitle">Spain</h4>
-								<h2 class="resort__title">Ibiza</h2>
+								<h2 class="resort__title"><a href="#">Ibiza</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 								<a href="#" class="btn">Find Out More</a>
 							</div>
@@ -170,12 +170,12 @@
 					</div>
 					<div>
 						<div class="resort">
-							<figure class="resort__image">
+							<a href="#" class="resort__image">
 								<img src="img/content/resorts/spain-magaluf.jpg" alt="ALT TEXT" />
-							</figure>
+							</a>
 							<div class="resort__wrap">
 								<h4 class="resort__subtitle">Spain</h4>
-								<h2 class="resort__title">Magaluf</h2>
+								<h2 class="resort__title"><a href="#">Magaluf</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 								<a href="#" class="btn">Find Out More</a>
 							</div>
@@ -183,12 +183,12 @@
 					</div>
 					<div>
 						<div class="resort">
-							<figure class="resort__image">
+							<a href="#" class="resort__image">
 								<img src="img/content/resorts/australia-sydney.jpg" alt="ALT TEXT" />
-							</figure>
+							</a>
 							<div class="resort__wrap">
 								<h4 class="resort__subtitle">Australia</h4>
-								<h2 class="resort__title">Sydney</h2>
+								<h2 class="resort__title"><a href="#">Sydney</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 								<a href="#" class="btn">Find Out More</a>
 							</div>
@@ -196,12 +196,12 @@
 					</div>
 					<div>
 						<div class="resort">
-							<figure class="resort__image">
+							<a href="#" class="resort__image">
 								<img src="img/content/resorts/greece-zante.jpg" alt="ALT TEXT" />
-							</figure>
+							</a>
 							<div class="resort__wrap">
 								<h4 class="resort__subtitle">Greece</h4>
-								<h2 class="resort__title">Zante</h2>
+								<h2 class="resort__title"><a href="#">Zante</a></h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 								<a href="#" class="btn">Find Out More</a>
 							</div>
