Updated TWHC files

--- a/sites/twhc/index.html
+++ b/sites/twhc/index.html
@@ -225,7 +225,7 @@
 								</footer>
 							</blockquote>
 							<div class="testimonial__image">
-								<img src="img/content/quotes/girl-1.png" alt="Jane Bloggs, barmaid in Zante" />
+								<img src="img/content/quotes/girl.jpg" alt="Jane Bloggs, Barmaid in Zante" />
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 								</footer>
 							</blockquote>
 							<div class="testimonial__image">
-								<img src="img/content/quotes/girl-1.png" alt="Jane Bloggs, barmaid in Zante" />
+								<img src="img/content/quotes/boy.jpg" alt="Joe Bloggs, Bar Manager in Magaluf" />
 							</div>
 						</div>
 					</div>
