Updated TWHCO templates

--- a/sites/twhc/index.html
+++ b/sites/twhc/index.html
@@ -47,7 +47,7 @@
 		
 	</head>
 	
-	<body class="home">
+	<body>
 		
 		<div class="infobar">
 			<ul class="contact">
@@ -64,7 +64,7 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
