Updated masthead image

--- a/sites/twhc/apply.html
+++ b/sites/twhc/apply.html
@@ -82,7 +82,7 @@
 			
 		</header>
 		
-		<div class="masthead" style="background: url(../img/content/placeholders/zante.jpg) center center; background-size: cover;">
+		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
 			<div class="wrap wrap--narrow align-center">
 				<h1>Apply Now</h1>
 				<p class="lead">Fill in our <strong>simple 3-step form</strong> and find your freedom!</p>
