--- a/sites/twhc/404.html
+++ b/sites/twhc/404.html
@@ -65,7 +65,7 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
@@ -76,22 +76,18 @@
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
 			
 		</header>
-			
-		<div class="band">
-			<div class="wrap wrap--narrow">
-				
-				<div class="hgroup align-center">
-					<h1 class="hgroup__title">404: Page not found</h1>
-					<p class="hgroup__lead">We're sorry but we couldn't find the page you're looking for.</p>
-					<a href="#" class="btn">Back to Homepage</a>
-				</div>
-				
+		
+		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
+			<div class="wrap wrap--narrow align-center">
+				<h1>404: Page not found</h1>
+				<p class="lead">We're sorry but we couldn't find the page you're looking for.</p>
+				<a href="#" class="btn">Back to Homepage</a>
 			</div>
 		</div>
 		
