--- a/sites/twhc/apply.html
+++ b/sites/twhc/apply.html
@@ -75,8 +75,8 @@
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
 			
@@ -115,14 +115,25 @@
 										</div>
 										<div class="form-group">
 											<label class="label form-group__title">Phone</label>
-											<div class="form-group__controls">
-												<input type="text" class="text-input" placeholder="" />
+											<div class="form-group__controls grid grid--gutter-small">
+												<div class="grid__item one-quarter">
+													<div class="select">
+														<select>
+															<option value="One">+44</option>
+															<option value="Two">+34</option>
+															<option value="Three">+353</option>
+														</select>
+													</div>
+												</div>
+												<div class="grid__item three-quarters">
+													<input type="text" class="text-input" placeholder="" />
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div>
-									<h4 class="form-title">2. Social media acounts</h4>
+									<h4 class="form-title">2. Social media accounts</h4>
 									<div class="box">
 										<div class="form-group">
 											<label class="label form-group__title">Facebook</label>
