--- a/sites/twhc/generic.html
+++ b/sites/twhc/generic.html
@@ -47,7 +47,7 @@
 		
 	</head>
 	
-	<body>
+	<body class="">
 		
 		<div class="infobar">
 			<ul class="contact">
@@ -64,30 +64,39 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
 			
 			<nav class="site-nav">
 				<ul class="site-nav__list">
-					<li class="site-nav__item"><a href="#" class="site-nav__link">About</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link">About</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
 			
 		</header>
+		
+		<section class="masthead masthead--video" style="height: auto; min-height: 300px; padding-top: 50px;">
+	
+			<video playsinline autoplay muted loop poster="video/hero-video.jpg" class="hero-video">
+			
+			</video>
+			
+			<div class="wrap wrap--narrow align-center">
+				<h1 class="oversize">Main Page Title</h1>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+			</div>
+	
+		</section>
 	
 		<div class="band">
 			<div class="wrap wrap--narrow">
-				
-				<div class="hgroup align-center">
-					<h1 class="hgroup__title">Main Page Title</h1>
-				</div>
 				
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
