--- a/sites/twhc/login.html
+++ b/sites/twhc/login.html
@@ -65,7 +65,7 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
@@ -76,7 +76,7 @@
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link">Login</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
