--- a/sites/twhc/jobs.html
+++ b/sites/twhc/jobs.html
@@ -64,7 +64,7 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
@@ -74,21 +74,23 @@
 					<li class="site-nav__item"><a href="#" class="site-nav__link">About</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
+					<li class="site-nav__item current-menu-item"><a href="#" class="site-nav__link">Jobs</a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
 			
 		</header>
+		
+		<div class="masthead" style="background: url(img/content/placeholders/zante.jpg) center center; background-size: cover;">
+			<div class="wrap wrap--narrow align-center">
+				<h1>Our Jobs</h1>
+				<p class="lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+			</div>
+		</div>
 	
 		<div class="band">
 			<div class="wrap">
-				
-				<div class="hgroup align-center">
-					<h1 class="hgroup__title">Our Jobs</h1>
-					<p class="hgroup__lead">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
-				</div>
 				
 				<div class="mosaic">
 					<div class="mosaic__item">
