--- a/sites/twhc/style-guide.html
+++ b/sites/twhc/style-guide.html
@@ -75,7 +75,7 @@
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Resorts</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Packages</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link">Jobs</a></li>
-					<li class="site-nav__item"><a href="#" class="site-nav__link">Contact</a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link">Login</a></li>
 					<li class="site-nav__item"><a href="#" class="site-nav__link amp">Apply Now</a></li>
 				</ul>
 			</nav>
