--- a/sites/twhc/register.html
+++ b/sites/twhc/register.html
@@ -65,7 +65,7 @@
 		<header class="page-head">
 			
 			<a href="#" class="page-head__logo">
-				<img src="img/interface/logo.svg" alt="The Working Holiday Company" />
+				<img src="img/interface/logo-dark.svg" alt="The Working Holiday Company" />
 			</a>
 			
 			<a href="#" class="page-head__toggle"><span>Menu</span></a>
